syntax = "proto3";
package base;
option csharp_namespace = "ILChat";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

message StringBaseResponse {
  string data = 2;
}