syntax = "proto3";

package user;
option csharp_namespace = "ILChat";
import "base.proto";

service UserService {
  //Get User by Id
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  //Create new user
  rpc CreateUser (CreateUserRequest) returns (base.StringBaseResponse);
  //Delete User by id
  rpc DeleteUser (DeleteUserRequest) returns (base.StringBaseResponse);
  //Update User by Id
  rpc UpdateUser (UpdateUserRequest) returns (base.StringBaseResponse);
}
//Get user
message GetUserResponse {
  string id = 1;
  string username = 2;
  string firstName = 3;
  string lastName = 4;
  string email = 5;
}

message GetUserRequest {
  string query = 1;
}
//Create user
message CreateUserRequest {
  string username = 1;
  string firstName = 2;
  string lastName = 3;
  string password = 4;
  string email = 5;
}

message UpdateUserRequest {
  string id = 1;
  string username = 2;
  string firstName = 3;
  string lastName = 4;
  string email = 5;
}

message DeleteUserRequest {
  string id = 1;
}